--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/se7smohamed/Extend#readme",
   "dependencies": {
+    "@types/node": "^18.7.18",
     "chokidar": "^3.3.0",
     "command-line-args": "^5.1.1",
     "decomment": "^0.9.2",
