--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "homepage": "https://github.com/se7smohamed/Extend#readme",
   "dependencies": {
+    "@types/js-beautify": "^1.13.3",
     "@types/node": "^18.7.18",
     "chokidar": "^3.3.0",
     "command-line-args": "^5.1.1",
     "decomment": "^0.9.2",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "js-beautify": "^1.14.6"
   }
 }
